Update to use the most recent platform-shared-lib messaging and kafka client changes; Some minor lint fixes;

--- a/package.json
+++ b/package.json
@@ -18,9 +18,8 @@
     "start:logging-svc": "npm -w @mojaloop/logging-bc-logging-svc run start",
     "build": "npm -ws run build",
     "watch": "npm -ws --parallel run watch",
-    "clean": "yarn run clean:dist",
-    "clean:npm": "rm -Rf node_modules && npm -ws run clean:npm",
-    "clean:dist": "npm -ws run clean:dist",
+    "clean": "rm -Rf dist && npm -ws --parallel run clean",
+    "clean:npm": "rm -Rf node_modules && npm -ws --parallel run clean:npm",
     "pretest": "echo 'FIX ME'",
     "standard": "yarn run --no-progress --stream lint'",
     "lint": "npm -ws -p run lint",
@@ -30,8 +29,8 @@
     "test:coverage-check": "npm -ws --parallel run test:coverage-check",
     "test:integration": "npm -ws --parallel --if-present run test:integration",
     "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "npm -ws --parallel run dep:check",
-    "dep:update": "npm -ws --parallel run dep:update",
+    "dep:check": "npm exec ncu -e 2 && npm -ws --parallel run dep:check",
+    "dep:update": "npm exec ncu -e 2 -u && npm -ws --parallel run dep:update",
     "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run npm_publish",
     "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
   },
