--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -22,6 +22,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -Rf dist",
+    "clean:npm": "rm -Rf node_modules",
     "prestart": "npm run build",
     "pretest": "npm run build",
     "standard": "npm run lint",
@@ -32,22 +33,21 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u",
+    "dep:check": "npm exec ncu -e 2",
+    "dep:update": "npm exec ncu -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.3",
-    "eslint": "^8.14.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "npm-check-updates": "^12.5.11",
-    "ts-jest": "^27.0.7",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
+    "eslint": "^8.23.1",
+    "jest": "^29.0.3",
+    "npm-check-updates": "^16.2.1",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.6.4"
   }
 }
