--- a/modules/logging-svc/package.json
+++ b/modules/logging-svc/package.json
@@ -22,6 +22,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -Rf dist",
+    "clean:npm": "rm -Rf node_modules",
     "pretest": "npm run build",
     "standard": "npm run lint",
     "lint": "eslint ./src",
@@ -31,16 +32,21 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u"
+    "dep:check": "npm exec ncu -e 2",
+    "dep:update": "npm exec ncu -u"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.1.0",
     "@mojaloop/logging-bc-public-types-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "^0.0.8"
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^8.1.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "^0.0.3"
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
+    "eslint": "^8.23.1",
+    "jest": "^29.0.3",
+    "npm-check-updates": "^16.2.1",
+    "ts-jest": "^29.0.1",
+    "typescript": "^4.6.4"
   }
 }
