--- a/modules/public-types-lib/package.json
+++ b/modules/public-types-lib/package.json
@@ -23,6 +23,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -Rf dist",
+    "clean:npm": "rm -Rf node_modules",
     "pretest": "npm run build",
     "standard": "npm run lint",
     "lint": "eslint ./src",
@@ -31,16 +32,15 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u",
+    "dep:check": "npm exec ncu -e 2",
+    "dep:update": "npm exec ncu -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "devDependencies": {
-    "eslint": "^8.14.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "npm-check-updates": "^12.5.11",
-    "ts-jest": "^27.0.7",
+    "eslint": "^8.23.1",
+    "jest": "^29.0.3",
+    "npm-check-updates": "^16.2.1",
+    "ts-jest": "^29.0.1",
     "typescript": "^4.6.4"
   }
 }
