Added docker support and changed service start to match other services

--- a/modules/logging-svc/package.json
+++ b/modules/logging-svc/package.json
@@ -18,7 +18,8 @@
     "/dist"
   ],
   "scripts": {
-    "start": "tsc && npm run service",
+    "start": "npm run service",
+    "start:dev": "npm run build && npm run service",
     "service": "node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
