--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,9 @@ workflows:
             - lint
       - publish_npm:
           context: org-global
+          filters:
+            branches:
+              only: main
           requires:
             - test-unit
 
