--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -33,21 +33,21 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "npm exec ncu -e 2",
-    "dep:update": "npm exec ncu -u",
+    "dep:check": "npm exec ncu -- -e 2",
+    "dep:update": "npm exec ncu -- -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0",
-    "winston": "^3.3.3"
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.12",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.13",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
-    "eslint": "^8.23.1",
-    "jest": "^29.0.3",
-    "npm-check-updates": "^16.2.1",
-    "ts-jest": "^29.0.1",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.16",
+    "eslint": "^8.27.0",
+    "jest": "^29.3.1",
+    "npm-check-updates": "^16.3.18",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.4"
   }
 }
