--- a/modules/logging-svc/package.json
+++ b/modules/logging-svc/package.json
@@ -34,21 +34,21 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "npm exec ncu -e 2",
-    "dep:update": "npm exec ncu -u"
+    "dep:check": "npm exec ncu -- -e 2",
+    "dep:update": "npm exec ncu -- -u"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^8.1.0",
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.0",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.0"
+    "@elastic/elasticsearch": "^8.5.0",
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.12",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.13"
   },
   "devDependencies": {
-    "@elastic/elasticsearch": "^8.1.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.0",
-    "eslint": "^8.23.1",
-    "jest": "^29.0.3",
-    "npm-check-updates": "^16.2.1",
-    "ts-jest": "^29.0.1",
+    "@elastic/elasticsearch": "^8.5.0",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.16",
+    "eslint": "^8.27.0",
+    "jest": "^29.3.1",
+    "npm-check-updates": "^16.3.18",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.4"
   }
 }
