--- a/modules/public-types-lib/package.json
+++ b/modules/public-types-lib/package.json
@@ -32,15 +32,15 @@
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "npm exec ncu -e 2",
-    "dep:update": "npm exec ncu -u",
+    "dep:check": "npm exec ncu -- -e 2",
+    "dep:update": "npm exec ncu -- -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "devDependencies": {
-    "eslint": "^8.23.1",
-    "jest": "^29.0.3",
-    "npm-check-updates": "^16.2.1",
-    "ts-jest": "^29.0.1",
+    "eslint": "^8.27.0",
+    "jest": "^29.3.1",
+    "npm-check-updates": "^16.3.18",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.6.4"
   }
 }
