--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
     "test:coverage-check": "npm -ws --parallel run test:coverage-check",
     "test:integration": "npm -ws --parallel --if-present run test:integration",
     "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "npm exec ncu -e 2 && npm -ws --parallel run dep:check",
-    "dep:update": "npm exec ncu -e 2 -u && npm -ws --parallel run dep:update",
+    "dep:check": "npm exec ncu -- -e 2; npm -ws --parallel run dep:check",
+    "dep:update": "npm exec ncu -- -e 2 -u; npm -ws --parallel run dep:update",
     "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run npm_publish",
     "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "eslint": "^8.14.0",
-    "husky": "^7.0.4",
-    "jest": "^27.3.1",
-    "npm-check-updates": "^12.5.11",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.6.4"
+    "@types/jest": "^29.2.2",
+    "@types/node": "^18.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "eslint": "^8.27.0",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "npm-check-updates": "^16.3.18",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "workspaces": [
     "modules/public-types-lib",
