updated integration test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,10 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}/modules/logging-svc/test/integration/index.test.ts",
-            "outFiles": [
-                "${workspaceFolder}/**/*.js"
-            ]
+            "program": "${file}"
         }
     ]
 }
