Updated to node 18 and latest dependencies

--- a/modules/logging-svc/Dockerfile
+++ b/modules/logging-svc/Dockerfile
@@ -1,21 +1,19 @@
 ########################################
-FROM node:16.13-alpine as builder
+FROM node:18.13-alpine as builder
 
-# Create app directory
+# Create the project directory inside the container.
 WORKDIR /app
 
-# build requirements
-RUN apk --no-cache add git
-RUN apk add --no-cache -t build-dependencies make gcc g++ python3 libtool libressl-dev openssl-dev autoconf automake \
-    && cd $(npm root -g)/npm \
-    && npm config set unsafe-perm true \
-    && npm install -g node-gyp
+RUN apk add --no-cache -t build-dependencies git make gcc g++ python3 libtool autoconf pkgconfig automake bash # wget tar xz
+
+RUN cd $(npm root -g)/npm
+RUN npm config set unsafe-perm true
+RUN npm install -g node-gyp
 
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 COPY package*.json ./
 
 COPY modules/public-types-lib/package.json ./modules/public-types-lib/
-# server uses the defaultLogger from the client lib
 COPY modules/client-lib/package.json ./modules/client-lib/
 COPY modules/logging-svc/package.json ./modules/logging-svc/
 
@@ -32,23 +30,17 @@ RUN npm install
 COPY tsconfig.json ./
 
 # copy required supporting modules/packages (only the private ones not published to npm)
-COPY modules/public-types-lib ./modules/public-types-lib
 COPY modules/client-lib ./modules/client-lib
+COPY modules/public-types-lib ./modules/public-types-lib
 
 # copy service code
 COPY modules/logging-svc ./modules/logging-svc
-
-
-#RUN ls -la
-#RUN ls -la ./modules/public-types-lib
-#RUN ls -la ./modules/logging-svc
-#RUN ls -la ./node_modules/@mojaloop/
 
 # build
 RUN npm run build
 
 ########################################
-FROM node:16.13-alpine
+FROM node:18.13-alpine
 WORKDIR /app
 
 COPY --from=builder /app .
