--- a/modules/client-lib/package.json
+++ b/modules/client-lib/package.json
@@ -38,16 +38,16 @@
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.12",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.2.13",
-    "winston": "^3.8.2"
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.14",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.30",
+    "winston": "~3.8.2"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.16",
-    "eslint": "^8.27.0",
-    "jest": "^29.3.1",
-    "npm-check-updates": "^16.3.18",
-    "ts-jest": "^29.0.3",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.69",
+    "eslint": "^8.34.0",
+    "jest": "^29.4.3",
+    "npm-check-updates": "^16.7.9",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.6.4"
   }
 }
