--- a/package.json
+++ b/package.json
@@ -15,45 +15,50 @@
   ],
   "scripts": {
     "prepare": "husky install",
+    "pre_commit_check": "npm run build && npm run lint && npm run test:unit",
     "start:logging-svc": "npm -w @mojaloop/logging-bc-logging-svc run start",
     "build": "npm -ws run build",
     "docker:build": "npm run build && docker build . -t \"mojaloop/logging-bc-logging-svc\"",
     "watch": "npm -ws --parallel run watch",
-    "clean": "rm -Rf dist && npm -ws --parallel run clean",
-    "clean:npm": "rm -Rf node_modules && npm -ws --parallel run clean:npm",
-    "pretest": "echo 'FIX ME'",
+    "clean": "npm run clean:dist; npm run clean:npm",
+    "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
+    "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
+
     "standard": "yarn run --no-progress --stream lint'",
     "lint": "npm -ws -p run lint",
     "lint:fix": "npm -ws -p run lint:fix",
-    "test:unit": "npm -ws run test:unit",
-    "test:coverage": "npm -ws --parallel run test:coverage",
-    "test:coverage-check": "npm -ws --parallel run test:coverage-check",
-    "test:integration": "npm -ws --parallel --if-present run test:integration",
+    "test": "npm run test:unit",
+    "test:unit": "npm -ws --if-present run test:unit",
+    "posttest": "npm run coverage:merge && npm run coverage:gen-report",
+    "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
+    "coverage:gen-report": "nyc report --reporter=lcov --reporter=text --temp-dir=./coverage",
+    "test:integration": "jest",
     "audit:check": "npm -ws --parallel run audit:check",
-    "dep:check": "npm exec ncu -- -e 2; npm -ws --parallel run dep:check",
-    "dep:update": "npm exec ncu -- -e 2 -u; npm -ws --parallel run dep:update",
+    "dep:check": "ncu -e 2; npm -ws run dep:check",
+    "dep:update": "ncu -e 2 -u; npm -ws run dep:update",
     "publish:public-types": "npm -w @mojaloop/logging-bc-public-types-lib run npm_publish",
     "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.1",
-    "@typescript-eslint/eslint-plugin": "^5.53.0",
-    "@typescript-eslint/parser": "^5.53.0",
-    "eslint": "^8.34.0",
+    "@types/jest": "^29.4.4",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
     "husky": "^8.0.3",
-    "jest": "^29.4.3",
-    "npm-check-updates": "^16.7.9",
+    "jest": "^29.5.0",
+    "npm-check-updates": "^16.7.12",
+	"nyc": "^15.1.0",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "workspaces": [
-    "modules/public-types-lib",
-    "modules/client-lib",
-    "modules/logging-svc",
-    "modules/*"
+    "packages/public-types-lib",
+    "packages/client-lib",
+    "packages/logging-svc",
+    "packages/*"
   ],
   "dependencies": {
-    "@mojaloop/logging-bc-client-lib": "file:modules/client-lib"
+
   }
 }
