--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@mojaloop/logging-bc-public-types-lib",
-  "version": "0.1.15",
-  "description": "Mojaloop logging bounded context public types lib (test change 2)",
+  "name": "@mojaloop/logging-bc-client-lib",
+  "version": "0.1.18",
+  "description": "Mojaloop logging bounded context client lib (test change 2)",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/public-types-lib",
+  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/client-lib",
   "bugs": {
     "url": "https://github.com/mojaloop/logging-bc/issues#readme"
   },
@@ -18,28 +18,36 @@
     "/dist"
   ],
   "scripts": {
-    "start": "npm run service",
-    "service": "tsc && node dist/index.js --config ../../.env",
+    "start": "node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "clean": "rm -Rf dist",
-    "clean:npm": "rm -Rf node_modules",
+    "clean": "npm run clean:npm; npm run clean:dist",
+    "clean:dist": "rm -rf dist",
+    "clean:npm": "rm -rf node_modules",
+    "prestart": "npm run build",
     "pretest": "npm run build",
     "standard": "npm run lint",
-    "lint": "eslint ./src",
+    "lint": "npx eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
+    "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "npm exec ncu -- -e 2",
-    "dep:update": "npm exec ncu -- -u",
+    "dep:check": "ncu -e 2",
+    "dep:update": "ncu -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
+  "dependencies": {
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.15",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.34",
+    "winston": "~3.8.2"
+  },
   "devDependencies": {
-    "eslint": "^8.34.0",
-    "jest": "^29.4.3",
-    "npm-check-updates": "^16.7.9",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.73",
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "npm-check-updates": "^16.7.12",
     "ts-jest": "^29.0.5",
     "typescript": "^4.6.4"
   }
