--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@mojaloop/logging-bc-client-lib",
-  "version": "0.1.18",
-  "description": "Mojaloop logging bounded context client lib (test change 2)",
+  "name": "@mojaloop/logging-bc-logging-svc",
+  "version": "0.1.2",
+  "description": "mojaloop logging service",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/modules/client-lib",
+  "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/logging-svc",
   "bugs": {
     "url": "https://github.com/mojaloop/logging-bc/issues#readme"
   },
@@ -12,41 +12,43 @@
     "Jason Bruwer <jason.bruwer@coil.com>",
     "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
   ],
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "private": true,
+  "main": "./dist/application/index.js",
   "files": [
     "/dist"
   ],
   "scripts": {
-    "start": "node dist/application/index.js",
+    "start": "npm run service",
+    "start:dev": "npm run build && npm run service",
+    "service": "node dist/application/index.js",
     "build": "tsc",
     "watch": "tsc -w",
-    "clean": "rm -Rf dist",
-    "clean:npm": "rm -Rf node_modules",
-    "prestart": "npm run build",
+    "clean": "npm run clean:npm; npm run clean:dist",
+    "clean:dist": "rm -rf dist",
+    "clean:npm": "rm -rf node_modules",
     "pretest": "npm run build",
     "standard": "npm run lint",
-    "lint": "npx eslint ./src",
+    "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
     "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
     "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
     "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
     "audit:check": "npm npm audit",
-    "dep:check": "npm exec ncu -- -e 2",
-    "dep:update": "npm exec ncu -- -u",
-    "npm_publish": "npm version patch && npm publish --tag=latest --access public"
+    "dep:check": "ncu -e 2",
+    "dep:update": "ncu -u"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.14",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.30",
-    "winston": "~3.8.2"
+    "@elastic/elasticsearch": "^8.6.0",
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.15",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.34"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.69",
-    "eslint": "^8.34.0",
-    "jest": "^29.4.3",
-    "npm-check-updates": "^16.7.9",
+    "@elastic/elasticsearch": "^8.6.0",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.73",
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "npm-check-updates": "^16.7.12",
     "ts-jest": "^29.0.5",
     "typescript": "^4.6.4"
   }
