--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "standard": "yarn run --no-progress --stream lint'",
     "lint": "npm -ws -p run lint",
     "lint:fix": "npm -ws -p run lint:fix",
-    "test": "npm run test:unit",
+    "test": "npm run test:unit; npm run test:integration",
     "test:unit": "npm -ws --if-present run test:unit",
     "posttest": "npm run coverage:merge && npm run coverage:gen-report",
     "coverage:merge": "nyc merge ./coverage/ ./coverage/coverage.json",
@@ -40,17 +40,17 @@
     "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
   },
   "devDependencies": {
-    "@types/jest": "^29.4.4",
-    "@types/node": "^18.15.3",
-    "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "@typescript-eslint/parser": "^5.55.0",
-    "eslint": "^8.36.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.38.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
-    "npm-check-updates": "^16.7.12",
+    "npm-check-updates": "^16.10.7",
 	"nyc": "^15.1.0",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "workspaces": [
     "packages/public-types-lib",
