--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,9 @@ jobs:
       - run:
           <<: *defaults_configure_git
       - run:
+          name: Add github.com to known hosts
+          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - run:
           <<: *defaults_npm_auth
       - run: npm config set registry https://registry.npmjs.org/
       - run:
@@ -124,6 +127,9 @@ jobs:
           at: *workingDirVar
       - run:
           <<: *defaults_configure_git
+      - run:
+          name: Add github.com to known hosts
+          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
       - run:
           name: Detect changes and publish docker images
           command: chmod +x .circleci/*.sh && .circleci/publish_docker.sh
