--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mojaloop/logging-bc-client-lib",
   "version": "0.1.19",
-  "description": "Mojaloop logging bounded context client lib (test change 2)",
+  "description": "Mojaloop logging bounded context client lib",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/client-lib",
   "bugs": {
