--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@mojaloop/logging-bc-logging-svc",
   "version": "0.1.2",
-  "description": "Mojaloop logging service",
+  "description": "Mojaloop Logging Service",
   "license": "Apache-2.0",
   "homepage": "https://github.com/mojaloop/logging-bc/tree/main/packages/logging-svc",
   "bugs": {
