configured logging service to be automatically published by CI/CD

--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -13,6 +13,9 @@
     "Pedro Sousa Barreto <pedrosousabarreto@gmail.com>"
   ],
   "private": true,
+  "mojaloop": {
+    "publish_to_dockerhub": true
+  },
   "main": "./dist/application/index.js",
   "files": [
     "/dist"
