--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,12 @@ jobs:
           <<: *defaults_configure_git
       - run:
           name: Add github.com to known hosts
-          command: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
+          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - run:
+          <<: *defaults_npm_auth
+      - run:
+          name: Configure NPM registry
+          command: npm config set registry https://registry.npmjs.org/
       - run:
           name: Detect changes, publishing npm and publish docker images
           command: chmod +x .circleci/*.sh && .circleci/publish.sh
