--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "clean": "npm run clean:dist; npm run clean:npm",
     "clean:npm": "rm -Rf node_modules; npm -ws run clean:npm",
     "clean:dist": "rm -Rf dist; npm -ws run clean:dist",
-
     "standard": "yarn run --no-progress --stream lint'",
     "lint": "npm -ws -p run lint",
     "lint:fix": "npm -ws -p run lint:fix",
@@ -48,7 +47,7 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "npm-check-updates": "^16.10.8",
-	"nyc": "^15.1.0",
+    "nyc": "^15.1.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   },
@@ -58,7 +57,5 @@
     "packages/logging-svc",
     "packages/*"
   ],
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
