--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -29,22 +29,22 @@
     "standard": "npm run lint",
     "lint": "npx eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch '**/test/unit/**/*.test.ts'",
-    "test:integration": "jest --passWithNoTests --testMatch '**/test/integration/**/*.test.ts'",
-    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch '**/test/unit/**/*.test.ts'",
-    "test:coverage-check": "jest --coverage --testMatch '**/test/unit/**/*.test.ts'",
+    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts || ECHO.",
+    "test:integration": "jest --passWithNoTests --testMatch **/test/integration/**/*.test.ts",
+    "test:coverage": "jest --passWithNoTests --coverage --coverageThreshold='{}' --testMatch **/test/unit/**/*.test.ts",
+    "test:coverage-check": "jest --coverage --testMatch **/test/unit/**/*.test.ts",
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u",
     "npm_publish": "npm version patch && npm publish --tag=latest --access public"
   },
   "dependencies": {
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.17",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.39",
+    "@mojaloop/logging-bc-public-types-lib": "~0.1.19",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.66",
     "winston": "~3.8.2"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.78",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.100",
     "eslint": "^8.38.0",
     "jest": "^29.5.0",
     "npm-check-updates": "^16.10.8",
