--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,12 @@ devspace*
 # General Ignore
 *IGNORE*
 
-docker-compose/exec/*
-/.idea/
 
-.vscode
+# yarn not using Zero-Installs:
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
