Update to use batch

--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -40,8 +40,8 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.10.0",
-    "@mojaloop/logging-bc-public-types-lib": "~0.1.20",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.67"
+    "@mojaloop/logging-bc-public-types-lib": "*",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.68"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^8.10.0",
