--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -29,20 +29,19 @@
     "standard": "npm run lint",
     "lint": "npx eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts || ECHO.",
+    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
-    "dep:update": "ncu -u",
-    "npm_publish": "npm version patch && npm publish --tag=latest --access public"
+    "dep:update": "ncu -u"
   },
   "dependencies": {
     "@mojaloop/logging-bc-public-types-lib": "~0.1.22",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.68",
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71",
     "winston": "~3.11.0"
   },
   "devDependencies": {
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.101",
-    "eslint": "^8.52.0",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
+    "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "npm-check-updates": "^16.14.6",
     "ts-jest": "^29.1.1",
