--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -33,7 +33,7 @@
     "standard": "npm run lint",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts || ECHO.",
+    "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
     "audit:check": "npm npm audit",
     "dep:check": "ncu -e 2",
     "dep:update": "ncu -u"
@@ -41,12 +41,12 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.10.0",
     "@mojaloop/logging-bc-public-types-lib": "*",
-    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.68"
+    "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.3.71"
   },
   "devDependencies": {
     "@elastic/elasticsearch": "^8.10.0",
-    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.101",
-    "eslint": "^8.52.0",
+    "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.2.103",
+    "eslint": "^8.53.0",
     "jest": "^29.7.0",
     "npm-check-updates": "^16.14.6",
     "ts-jest": "^29.1.1",
