--- a/packages/public-types-lib/package.json
+++ b/packages/public-types-lib/package.json
@@ -20,7 +20,8 @@
     "scripts": {
         "start": "npm run service",
         "service": "tsc && node dist/index.js --config ../../.env",
-        "build": "tsc",
+        "generate:proto": "node generate-proto.js",
+        "build": "npm run generate:proto && tsc",
         "watch": "tsc -w",
         "clean": "npm run clean:npm; npm run clean:dist",
         "clean:dist": "rm -rf dist",
@@ -36,10 +37,15 @@
         "npm_publish": "npm version patch && npm publish --tag=latest --access public"
     },
     "devDependencies": {
+        "@types/google-protobuf": "^3.15.12",
         "eslint": "^8.56.0",
+        "google-protobuf": "^3.21.4",
         "jest": "^29.7.0",
         "npm-check-updates": "^16.14.15",
+        "protoc-gen-ts": "^0.8.7",
         "ts-jest": "^29.1.2",
+        "ts-proto": "^1.181.1",
+        "ts-protoc-gen": "^0.15.0",
         "typescript": "^4.6.4"
     },
     "engines": {
