--- a/packages/public-types-lib/package.json
+++ b/packages/public-types-lib/package.json
@@ -20,7 +20,6 @@
     "scripts": {
         "start": "npm run service",
         "service": "tsc && node dist/index.js --config ../../.env",
-        "generate:proto": "node generate-proto.js",
         "build": "npm run generate:proto && tsc",
         "watch": "tsc -w",
         "clean": "npm run clean:npm; npm run clean:dist",
@@ -34,7 +33,8 @@
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
         "dep:update": "ncu -u",
-        "npm_publish": "npm version patch && npm publish --tag=latest --access public"
+        "npm_publish": "npm version patch && npm publish --tag=latest --access public",
+        "generate:proto": "node generate-proto.js"
     },
     "devDependencies": {
         "@types/google-protobuf": "^3.15.12",
