--- a/package.json
+++ b/package.json
@@ -39,18 +39,21 @@
         "publish:client-lib": "npm -w @mojaloop/logging-bc-client-lib run npm_publish"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.12",
+        "@eslint/js": "^9.31.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20.4.10",
-        "@typescript-eslint/eslint-plugin": "^6.2.1",
-        "@typescript-eslint/parser": "^6.2.1",
-        "eslint": "^8.46.0",
+        "@typescript-eslint/eslint-plugin": "^8.37.0",
+        "@typescript-eslint/parser": "^8.37.0",
+        "eslint": "^9.31.0",
+        "globals": "^16.3.0",
         "husky": "^8.0.3",
         "jest": "^29.6.4",
         "npm-check-updates": "^16.10.19",
         "nyc": "^15.1.0",
-        "ts-jest": "^29.1.2",
-        "tslib": "^2.6.2",
-        "typescript": "^5.1.6"
+        "ts-jest": "^29.1.5",
+        "tslib": "^2.6.3",
+        "typescript": "^5.1.6",
+        "typescript-eslint": "^8.37.0"
     },
     "workspaces": [
         "packages/public-types-lib",
