--- a/packages/client-lib/package.json
+++ b/packages/client-lib/package.json
@@ -27,24 +27,24 @@
         "prestart": "npm run build",
         "pretest": "npm run build",
         "standard": "npm run lint",
-        "lint": "npx eslint ./src",
-        "lint:fix": "eslint ./src --fix",
+        "lint": "npx eslint ./src -c ../../eslint.config.js",
+        "lint:fix": "eslint ./src -c ../../eslint.config.js --fix",
         "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
         "dep:update": "ncu -u"
     },
     "dependencies": {
-        "@mojaloop/logging-bc-public-types-lib": "~0.5.3",
-        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.7",
-        "winston": "~3.11.0"
+        "@mojaloop/logging-bc-public-types-lib": "~0.5.5",
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.19",
+        "winston": "~3.17.0"
     },
     "devDependencies": {
-        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.5",
-        "eslint": "^8.56.0",
-        "jest": "^29.7.0",
-        "npm-check-updates": "^16.14.15",
-        "ts-jest": "^29.1.2",
+        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.7.2",
+        "eslint": "^9.31.0",
+        "jest": "^30.0.4",
+        "npm-check-updates": "^18.0.1",
+        "ts-jest": "^29.4.0",
         "typescript": "^4.6.4"
     },
     "engines": {
