--- a/packages/logging-svc/package.json
+++ b/packages/logging-svc/package.json
@@ -31,24 +31,24 @@
         "clean:npm": "rm -rf node_modules",
         "pretest": "npm run build",
         "standard": "npm run lint",
-        "lint": "eslint ./src",
-        "lint:fix": "eslint ./src --fix",
+        "lint": "eslint ./src -c ../../eslint.config.js",
+        "lint:fix": "eslint ./src -c ../../eslint.config.js --fix",
         "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
         "dep:update": "ncu -u"
     },
     "dependencies": {
-        "@elastic/elasticsearch": "^8.12.1",
+        "@elastic/elasticsearch": "^9.0.3",
         "@mojaloop/logging-bc-public-types-lib": "*",
-        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.18",
-        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.5.7"
+        "@mojaloop/platform-shared-lib-nodejs-kafka-client-lib": "~0.5.19",
+        "@mojaloop/platform-shared-lib-messaging-types-lib": "~0.7.2"
     },
     "devDependencies": {
-        "eslint": "^8.56.0",
-        "jest": "^29.7.0",
-        "npm-check-updates": "^16.14.15",
-        "ts-jest": "^29.1.2",
+        "eslint": "^9.31.0",
+        "jest": "^30.0.4",
+        "npm-check-updates": "^18.0.1",
+        "ts-jest": "^29.4.0",
         "typescript": "^4.6.4"
     },
     "engines": {
