--- a/packages/public-types-lib/package.json
+++ b/packages/public-types-lib/package.json
@@ -27,8 +27,8 @@
         "clean:npm": "rm -rf node_modules",
         "pretest": "npm run build",
         "standard": "npm run lint",
-        "lint": "eslint ./src",
-        "lint:fix": "eslint ./src --fix",
+        "lint": "eslint ./src -c ../../eslint.config.js",
+        "lint:fix": "eslint ./src -c ../../eslint.config.js --fix",
         "test:unit": "jest --passWithNoTests --testMatch **/test/unit/**/*.test.ts",
         "audit:check": "npm npm audit",
         "dep:check": "ncu -e 2",
@@ -36,10 +36,10 @@
         "npm_publish": "npm version patch && npm publish --tag=latest --access public"
     },
     "devDependencies": {
-        "eslint": "^8.56.0",
-        "jest": "^29.7.0",
-        "npm-check-updates": "^16.14.15",
-        "ts-jest": "^29.1.2",
+        "eslint": "^9.31.0",
+        "jest": "^30.0.4",
+        "npm-check-updates": "^18.0.1",
+        "ts-jest": "^29.4.0",
         "typescript": "^4.6.4"
     },
     "engines": {
